[B]Errata[/B]
- [XBMC] Thumbnails sometimes turns into black box or Folder (XBMC not detecting when thumbnail is set and defaulting to icon?)
- [XBMC] When sorting items, it's impossible to get them to return to their original order
- [XBMC] Has Excessive Memory use after running the plugin for prolonged periods of time
- [RTMPDUMP] Doesn't support handshake type 10 which is required by youtube.

[B]Version 3.4.0[/B]
- Fixed Login was broken after youtube changed look
- Fixed Playback of over 18 videos was broken with the new youtube look
- Fixed User scraper for my liked videos
- Fixed scraper for Top 100 Trailers, Youtube weekly Top 100 Music videos, and Youtube Disco
- Added Translations for a multitude of languages, special thanks to the Transifex project

[B]Version 3.3.0[/B]
- Fixed playback of over 18 videos, should now work if the user is logged in.
- Fixed bug where playback or video listing would fail due to bug in cache
- Fixed problem in core that would sometimes break playback
- Fixed problem in player that would cause hard crash when playback stream isn't available
- Disabled movie section since it seems completely broken on the home page
- Disabled show section since it seems completely broken on the home page
- Added new scraper for VISO trailers which seems to have replace the old trailers page.

[B]Version 3.2.0[/B]
- Fixed playback
- Minor refactoring to increase testability

[B]Version 3.1.0[/B]
- Fixed login
- Fixed crash when listing subscriptions with non ascii chars
- Fixed subtitle parser which was broken by the move to parseDOM
- Fixed various scraper integration test failing cause by youtube site changes

[B]Version 3.0.0[/B]
- Fixed show scraper since it was broken in a recent redesign
- Disabled trailers scraper since functionality is gone from YouTubes site
- Fixed Login code broken by YouTube redesign.
- Change from minidom to parsedom(Should speedup raspberry PI)

[B]Version 2.9.2[/B]